Fix z-index values.

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -83,7 +83,7 @@ section {
 
 .home {
     position: absolute;
-    z-index: 10;
+    z-index: 3;
     display: flex;
     flex-flow: column;
     align-items: center;
